Bussen Flex Start

--- a/game.html
+++ b/game.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8"> 
         <link href="style.css" typ="text/css" rel="stylesheet">
-		<title>Bussen</title>
+		<title>Bussen med flex</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
 	</head>
 	<body>
