--- a/game.html
+++ b/game.html
@@ -8,16 +8,26 @@
 	</head>
 	<body>
         <div class="container">
-            <div id="card1"><img src="cards/card-game-back.png" alt="card"></div>
-            <div id="card2"><img src="cards/card-game-back.png" alt="card"></div>
-            <div id="card3"><img src="cards/card-game-back.png" alt="card"></div>
-            <div id="card4"><img src="cards/card-game-back.png" alt="card"></div>
-            <div id="card5"><img src="cards/card-game-back.png" alt="card"></div>
-            <div id="card6"><img src="cards/card-game-back.png" alt="card"></div>
-            <div id="card7"><img src="cards/card-game-back.png" alt="card"></div>
-            <div id="card8"><img src="cards/card-game-back.png" alt="card"></div>
-            <div id="card9"><img src="cards/card-game-back.png" alt="card"></div>
-            <div id="card10"><img src="cards/card-game-back.png" alt="card"></div>
+
+            <div class="row">
+                <div id="card1"><img src="cards/card-game-back.png" alt="card"></div>
+            </div>
+            <div class="row">
+                <div id="card3"><img src="cards/card-game-back.png" alt="card"></div>
+                <div id="card4"><img src="cards/card-game-back.png" alt="card"></div>
+            </div>
+            <div class="row">
+                <div id="card5"><img src="cards/card-game-back.png" alt="card"></div>
+                <div id="card6"><img src="cards/card-game-back.png" alt="card"></div>
+                <div id="card7"><img src="cards/card-game-back.png" alt="card"></div>
+            </div>
+            <div class="row">
+                <div id="card8"><img src="cards/card-game-back.png" alt="card"></div>
+                <div id="card9"><img src="cards/card-game-back.png" alt="card"></div>
+                <div id="card10"><img src="cards/card-game-back.png" alt="card"></div>
+                <div id="card11"><img src="cards/card-game-back.png" alt="card"></div>
+            </div>
+
         </div>
 	</body>
 </html>
