Audio when cards flip

--- a/game.html
+++ b/game.html
@@ -1,48 +1,53 @@
 <!DOCTYPE html>
 <html lang="sv">
-	<head>
-		<meta charset="UTF-8"> 
-        <link href="style.css" typ="text/css" rel="stylesheet">
-		<title>Bussen med flex</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-	</head>
-	<body>
-        <div class="container">
 
-            <div class="row">
-                <div id="card1"><img src="cards/card-game-back.png" alt="card"></div>
-                <input type=hidden id="card1" name="card1" value=""/>
-            </div>
-            <div class="row">
-                <div id="card2"><img src="cards/card-game-back.png" alt="card"></div>
-                <input type=hidden id="card2" name="card2" value=""/>
-                <div id="card3"><img src="cards/card-game-back.png" alt="card"></div>
-                <input type=hidden id="card3" name="card3" value=""/>
-            </div>
-            <div class="row">
-                <div id="card4"><img src="cards/card-game-back.png" alt="card"></div>
-                <input type=hidden id="card4" name="card4" value=""/>
-                <div id="card5"><img src="cards/card-game-back.png" alt="card"></div>
-                <input type=hidden id="card5" name="card5" value=""/>
-                <div id="card6"><img src="cards/card-game-back.png" alt="card"></div>
-                <input type=hidden id="card6" name="card6" value=""/>
-            </div>
-            <div class="row">
-                <div id="card7"><img src="cards/card-game-back.png" alt="card"></div>
-                <input type=hidden id="card7" name="card7" value=""/>
-                <div id="card8"><img src="cards/card-game-back.png" alt="card"></div>
-                <input type=hidden id="card8" name="card8" value=""/>
-                <div id="card9"><img src="cards/card-game-back.png" alt="card"></div>
-                <input type=hidden id="card9" name="card9" value=""/>
-                <div id="card10"><img src="cards/card-game-back.png" alt="card"></div>
-                <input type=hidden id="card10" name="card10" value=""/>
-            </div>
+<head>
+    <meta charset="UTF-8">
+    <link href="style.css" typ="text/css" rel="stylesheet">
+    <title>Bussen med flex</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+</head>
 
+<body>
+    <div class="container">
+
+        <div class="row">
+            <div id="card1"><img src="cards/card-game-back.png" alt="card"></div>
+            <input type=hidden id="card1" name="card1" value="" />
+        </div>
+        <div class="row">
+            <div id="card2"><img src="cards/card-game-back.png" alt="card"></div>
+            <input type=hidden id="card2" name="card2" value="" />
+            <div id="card3"><img src="cards/card-game-back.png" alt="card"></div>
+            <input type=hidden id="card3" name="card3" value="" />
+        </div>
+        <div class="row">
+            <div id="card4"><img src="cards/card-game-back.png" alt="card"></div>
+            <input type=hidden id="card4" name="card4" value="" />
+            <div id="card5"><img src="cards/card-game-back.png" alt="card"></div>
+            <input type=hidden id="card5" name="card5" value="" />
+            <div id="card6"><img src="cards/card-game-back.png" alt="card"></div>
+            <input type=hidden id="card6" name="card6" value="" />
+        </div>
+        <div class="row">
+            <div id="card7"><img src="cards/card-game-back.png" alt="card"></div>
+            <input type=hidden id="card7" name="card7" value="" />
+            <div id="card8"><img src="cards/card-game-back.png" alt="card"></div>
+            <input type=hidden id="card8" name="card8" value="" />
+            <div id="card9"><img src="cards/card-game-back.png" alt="card"></div>
+            <input type=hidden id="card9" name="card9" value="" />
+            <div id="card10"><img src="cards/card-game-back.png" alt="card"></div>
+            <input type=hidden id="card10" name="card10" value="" />
         </div>
 
-        <div class="message">
-        </div>
+    </div>
 
-        <script src="app.js"></script>
-	</body>
+    <div class="message">
+    </div>
+
+    <audio id="cardAudio"></audio>
+
+    <script src="app.js"></script>
+</body>
+
 </html>
